--jdk-internals: limit the module graph only when the source set declares it
cf8a3732 made the fallback supply a module list where there had been none, and that
list also reached --limit-modules. The two options are not interchangeable:

  --add-exports  is ADDITIVE. It opens packages of modules that are present and
                 names no module it does not also export. Safe from either source.
  --limit-modules is a CLAIM ABOUT COMPLETENESS. It removes every module not on the
                 list, so an incomplete list breaks code that resolved a moment ago.

A source set's dependencies() are a statement about its module graph. A
configuration's classPathParts are a class path — what happens to be on it — and
routinely incomplete. Only the former justifies limiting.

Measured on guava, same configuration, --jdk-internals throughout:

  no flag / flag before cf8a3732     4 dropped compilation units
  cf8a3732 (limit from fallback)     6   MacHashFunctionTest fixed, but
                                         LittleEndianByteArray, UnsignedBytes and
                                         AbstractFutureState newly broken on
                                         "Type Unsafe not found"
  this commit                        3   MacHashFunctionTest stays fixed, the three
                                         Unsafe files recover

The 20 jmods guava's class path declares are all java.*; sun.misc.Unsafe lives in
jdk.unsupported, which is not among them. Limiting to that list removed it.

Plugin-route configurations are unaffected: their source sets declare 21 JDK modules
each, so --limit-modules is emitted exactly as before, and the java.net.http clash it
guards against is still guarded.

TestJdkInternalsWithoutJdkDependencies stays green, as does the rest of
:maddi-inspection-openjdk:test. The unit test could not have caught this: it pins
that both authoring shapes agree on a type being present, and the regression needs a
declared module set that is incomplete